added Installation of MongoDB commands

--- a/index.html
+++ b/index.html
@@ -131,7 +131,17 @@ set sid=new.sid where sid= old.sid;<br>
 end;<br>
 //<br>
         </p>
-<h2>assignment 10</h2>
+ 
+<h2>Installation of MongoDB</h2>
+        <p>
+            sudo apt-get install mongodb
+            sudo apt-get update
+            sudo service mongodb start
+            mongo
+            show dbs
+            </p><br>
+        
+<h2>assignment 10</h2><br>
         <p>
             use assignment10;(Database name)
             db.createCollection("Library");
